test/badIndexReplacement.slq
def solve[n:!â„•](x:ğ”¹^n, y:ğ”¹)lifted{
    for half_p in [1..((n-1) div 2)]{
        for k in [0..(2*half_p)..n-1]{
            for j in [0..half_p-1]{
                x[k + j] := X[k + j]; // error
            }
        }
        if (x == vector(n,1:!ğ”¹)){
            y := X(y); // error
        }
        if (x == vector(n,0:!ğ”¹)){
            y := X(y); // error
        }
        for k in [0..(2*half_p)..n-1]{
            for j in [0..half_p-1]{
                x[k + j] := X[k + j]; // error
            }
        }
    }
    return (x, y);
}
